# tui-pulse

./: Cargo.toml
crates/core/: Cargo.toml
crates/core-macros/: Cargo.toml
crates/core-macros/src/: lib.rs
crates/core/logs/: application.log.2025-08-31
crates/core/src/: exit.rs  frame_ext.rs  lib.rs
crates/core/src/component/: mod.rs  tests.rs
crates/core/src/hooks/: mod.rs  test_utils.rs
crates/core/src/hooks/battery/: mod.rs
crates/core/src/hooks/callback/: mod.rs  tests.rs
crates/core/src/hooks/context/: mod.rs  tests.rs
crates/core/src/hooks/effect/: mod.rs  tests.rs
crates/core/src/hooks/event/: global_events.rs  mod.rs
crates/core/src/hooks/future/: mod.rs  tests.rs
crates/core/src/hooks/hover/: mod.rs  tests.rs
crates/core/src/hooks/idle/: mod.rs  tests.rs
crates/core/src/hooks/interval/: mod.rs  tests.rs
crates/core/src/hooks/once/: mod.rs  tests.rs
crates/core/src/hooks/reducer/: mod.rs  tests.rs
crates/core/src/hooks/signal/: mod.rs  tests.rs
crates/core/src/hooks/state/: mod.rs  tests.rs
crates/core/src/hooks/storage/: mod.rs  tests.rs
crates/core/src/panic_handler/: mod.rs
crates/core/src/vdom/: mod.rs
crates/examples/: Cargo.toml
crates/examples/basic_example/: Cargo.toml
crates/examples/basic_example/src/: main.rs
crates/examples/callback_showcase/src/: main.rs
crates/examples/context_showcase/src/: main.rs
crates/examples/counter_app/: Cargo.toml
crates/examples/counter_app/src/: main.rs
crates/examples/effect_showcase/src/: main.rs
crates/examples/future_showcase/src/: main.rs
crates/examples/idle_showcase/src/: main.rs
crates/examples/interval_showcase/: Cargo.toml
crates/examples/interval_showcase/src/: main.rs
crates/examples/lifecycle_dashboard/src/: main.rs
crates/examples/signal_example/: Cargo.toml
crates/examples/signal_example/src/: main.rs
crates/examples/signal_example/src/components/: mod.rs
crates/examples/signal_example/src/signals/: mod.rs
crates/examples/sqlite_finance_tracker/: README.md
crates/examples/sqlite_finance_tracker/src/: main.rs
crates/examples/src/: main.rs
crates/examples/storage_showcase/: README.md
crates/examples/storage_showcase/src/: main.rs
crates/examples/todolist_reducer/src/: main.rs
crates/playground/src/: lib.rs
crates/pulse/: Cargo.toml
crates/pulse/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  renderer.rs  terminal.rs
