[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
battery = "0.7.8"
chrono = "0.4.41"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
dashmap = "6.1.0"
once_cell = "1.21.3"
parking_lot = "0.12.4"
rand = "0.9.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.23" }
serde = { version = "1.0.219" }
serde_json = "1.0.143"
tokio = "1.47.1"

better-panic = "0.3.0"
human-panic = "2.0.3"
thiserror = "2.0.16"

tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.20", default-features = false }
tracing-appender = "0.2.3"

proc-macro2 = "1.0.101"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.40"
syn = "2.0.106"
trybuild = "1.0.110"

pulse = { path = "crates/pulse" }
pulse_core = { path = "crates/core" }
pulse_core_macros = { path = "crates/core-macros" }
pulse_runtime = { path = "crates/runtime" }
