[package]
name = "pulse_core_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }
thiserror = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
