[package]
name = "pulse_core"
version = "0.1.0"
edition = "2024"

[features]
default = []
file-persistence = []
sqlite = ["sqlx", "async-trait"]

[dependencies]
battery = "0.7.8"
better-panic = { workspace = true }
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
dashmap = { workspace = true }
human-panic = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
ratatui = { workspace = true, features = ["all-widgets"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
lazy_static = "1.5.0"
ahash = "0.8.12"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
], optional = true }
async-trait = { version = "0.1.89", optional = true }

[dev-dependencies]
tempfile = "3.21.0"
