[package]
name = "pulse_examples"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "basic_example"
path = "basic_example/src/main.rs"

[[bin]]
name = "counter_app"
path = "counter_app/src/main.rs"

[[bin]]
name = "signal_example"
path = "signal_example/src/main.rs"

[[bin]]
name = "lifecycle_dashboard"
path = "lifecycle_dashboard/src/main.rs"

[[bin]]
name = "effect_showcase"
path = "effect_showcase/src/main.rs"

[[bin]]
name = "interval_showcase"
path = "interval_showcase/src/main.rs"

[dependencies]
pulse = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "tracing-log",
    "chrono",
] }
time = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
