[package]
name = "interval_showcase"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interval_showcase"
path = "src/main.rs"

[dependencies]
pulse = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
] }
time = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
