[package]
name = "signal-example"
version = "0.1.0"
edition = "2024"

[dependencies]
pulse = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "tracing-log",
    "chrono",
] }
time = { workspace = true, features = ["chrono"] }
chrono = { workspace = true }

[workspace]
resolver = "2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "signal-example"
path = "src/main.rs"
